<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <import type="android.view.View"/>
        <import type="android.text.TextUtils"/>
        <variable
            name="challenge"
            type="com.aleks.aleksiev.codewars.presentation.challengedetails.ChallengeDetailsState"/>
    </data>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/content_padding"
        tools:context=".presentation.challengedetails.ChallengeDetailsFragment">

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/challengeNameLabel"
            style="@style/LabelTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/challenge_name"
            android:layout_marginTop="@dimen/top_margin"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/challengeNameTextView"
            style="@style/TitleTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@{challenge.challengeName}"
            app:layout_constraintTop_toBottomOf="@+id/challengeNameLabel"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:text="@tools:sample/cities"/>

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/challengeCompletedAtLabel"
            style="@style/LabelTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/completed_at"
            android:layout_marginTop="@dimen/top_margin"
            app:layout_constraintTop_toBottomOf="@+id/challengeNameTextView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:visibility="@{TextUtils.isEmpty(challenge.challengeCompletedAt) ? View.GONE : View.VISIBLE}"/>

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/challengeCompletedAtTextView"
            style="@style/DetailsTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@{challenge.challengeCompletedAt}"
            app:layout_constraintTop_toBottomOf="@+id/challengeCompletedAtLabel"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:visibility="@{TextUtils.isEmpty(challenge.challengeCompletedAt) ? View.GONE : View.VISIBLE}"
            tools:text="@tools:sample/date/ddmmyy"/>

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/challengeLanguagesLabel"
            style="@style/LabelTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/challenge_languages"
            android:layout_marginTop="@dimen/top_margin"
            app:layout_constraintTop_toBottomOf="@+id/challengeCompletedAtTextView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:visibility="@{TextUtils.isEmpty(challenge.challengeLanguages) ? View.GONE : View.VISIBLE}"/>

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/challengeLanguagesTextView"
            style="@style/DetailsTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@{challenge.challengeLanguages}"
            app:layout_constraintTop_toBottomOf="@+id/challengeLanguagesLabel"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:visibility="@{TextUtils.isEmpty(challenge.challengeLanguages) ? View.GONE : View.VISIBLE}"
            tools:text="@tools:sample/full_names"/>

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/challengeTagsLabel"
            style="@style/LabelTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/challenge_tags"
            android:layout_marginTop="@dimen/top_margin"
            app:layout_constraintTop_toBottomOf="@+id/challengeLanguagesTextView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:visibility="@{TextUtils.isEmpty(challenge.challengeTags) ? View.GONE : View.VISIBLE}"/>

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/challengeTagsTextView"
            style="@style/DetailsTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@{challenge.challengeTags}"
            app:layout_constraintTop_toBottomOf="@+id/challengeTagsLabel"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:visibility="@{TextUtils.isEmpty(challenge.challengeTags) ? View.GONE : View.VISIBLE}"
            tools:text="@tools:sample/full_names"/>

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/challengeDescriptionLabel"
            style="@style/LabelTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/challenge_description"
            android:layout_marginTop="@dimen/top_margin"
            app:layout_constraintTop_toBottomOf="@+id/challengeTagsTextView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:visibility="@{TextUtils.isEmpty(challenge.challengeDescription) ? View.GONE : View.VISIBLE}"/>

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/challengeDescriptionTextView"
            style="@style/DetailsTextViewStyleAutoSize"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:ellipsize="end"
            android:text="@{challenge.challengeDescription}"
            android:singleLine="false"
            app:layout_constraintTop_toBottomOf="@+id/challengeDescriptionLabel"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:visibility="@{TextUtils.isEmpty(challenge.challengeDescription) ? View.GONE : View.VISIBLE}"
            tools:text="@tools:sample/cities"/>

    </android.support.constraint.ConstraintLayout>
</layout>